# src/main/java/com/graduation/graduationserver/adapter/TemperatureInformationAdapter.java
@@ -1,0 +1,11 @@
+package com.graduation.graduationserver.adapter;
+
+import swaggergen.model.AverageTemperatureInformationResponse;
+import swaggergen.model.TemperatureInformationResponse;
+
+public interface TemperatureInformationAdapter {
+
+    TemperatureInformationResponse getTemperatureInformation();
+    AverageTemperatureInformationResponse getAvgTemperatureInformation();
+
+}
